<resources>
    <string name="app_name">MeritPhos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="DIRECT">DIRECT</string>
    <string name="Sendaphotoorvideo">Send a photo or video</string>
    <string name="InstagramDirect">Instagram Direct</string>
    <string name="Sendphotosandvideos">Send photos and videos directly to your friends. Only the people you send to can see these posts.</string>
    <string name="ACTIVITY">ACTIVITY</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <string name="OPTIONS">OPTIONS</string>
    <string name="FOLLOWPEOPLE">FOLLOW PEOPLE</string>
    <string name="FacebookFriends">Facebook Friends</string>
    <string name="FindContacts">Find Contacts</string>
    <string name="InviteFriends">Invite Friends</string>
    <string name="Editprofile">Edit profile</string>
    <string name="ChangePassword">Change Password</string>
    <string name="PostsYouveLiked">Posts You\'ve Liked</string>
    <string name="PrivateAccount">Private Account</string>
    <string name="Whenyouraccountisprivate">When your account is private, only people you approve can see your photos and videos. Your existing followers won\'t be affected.</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="LinkedAccounts">Linked Accounts</string>
    <string name="PushNotifications">Push Notifications</string>
    <string name="Camera">Camera</string>
    <string name="CellularDataUse">Cellular Data Use</string>
    <string name="SaveOriginalPhotos">Save Original Photos</string>
    <string name="SaveVideosAfterPosting">Save Videos After Posting</string>
    <string name="Savingvideostoyourphone">Saving videos to your phone uses more storage space.</string>
    <string name="SUPPORT">SUPPORT</string>
    <string name="InstagramHelpCenter">Instagram Help Center</string>
    <string name="ReportaProblem">Report a Problem</string>
    <string name="ABOUT">ABOUT</string>
    <string name="Ads">Ads</string>
    <string name="Blog">Blog</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="TermsofService">Terms of Service</string>
    <string name="OpenSourceLibraries">Open Source Libraries</string>
    <string name="ClearSearchHistory">Clear Search History</string>
    <string name="LogOut">Log Out</string>
    <string name="EditYourProfile">Edit Your Profile</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="Signuptoseephotos">Sign up to see photos and videos from your friends</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="LOGIN">LOG IN</string>
    <string name="Enteryouremail">Enter your email</string>
    <string name="LoginwithInstagram">Log in with Instagram</string>
</resources>
