<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themebackgroundcolor">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themecolor"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/Signuptoseephotos"
            android:textColor="#ffffff"
            android:textSize="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/relative1"
        android:background="#123456"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnSignUpFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/SIGNUP"
            android:textColor="#b5b6b8"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/btnLoginFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/LOGIN"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linear1"></RelativeLayout>
</RelativeLayout>