<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themebackgroundcolor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="@dimen/actionbar_height"
            android:layout_height="match_parent"
            android:background="@drawable/selector_press_themecolor_icon"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_border_back_icon"
                android:src="@drawable/icon_back" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btnDirect"
            android:layout_toRightOf="@+id/btnBack"
            android:background="@color/themecolor">

            <TextView
                style="@style/style_label_actionbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DIRECT" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnDirect"
            android:layout_width="@dimen/actionbar_height"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_press_themecolor_icon"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_send_direct" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1"
        android:background="#000000"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Sendaphotoorvideo"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv1"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/pic_direct_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/InstagramDirect"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/Sendphotosandvideos"
                android:textColor="#a1a1a3" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>